--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -36,7 +36,7 @@ jobs:
           php-version: ${{ matrix.php }}
 
       - name: Downgrade PHP
-        if: env.php == '5.6'
+        if: matrix.php == '5.6'
         run: composer self-update --2.2
 
       - name: Validate composer.json and composer.lock
