--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -30,14 +30,14 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
+      - name: Downgrade Composer
+        if: matrix.php == '5.6'
+        run: composer self-update --2.2
+
       - name: Setup PHP
         uses: nanasess/setup-php@master
         with:
           php-version: ${{ matrix.php }}
-
-      - name: Downgrade PHP
-        if: matrix.php == '5.6'
-        run: composer self-update --2.2
 
       - name: Validate composer.json and composer.lock
         run: composer validate
