--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -15,9 +15,20 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ ubuntu-18.04 ]  # OS. ubuntu-18.04 is also available.
-        php: [ '5.6', '7.2', '7.4' ] # PHP versions to check.
-        wp: [ 'latest', '5.4' ]      # WordPress version to check.
+        operating-system: [ ubuntu-latest ] # OS. ubuntu-18.04 is also available.
+        php: [ '7.4', '8.0', '8.1' ]        # PHP versions to check.
+        wp: [ 'latest', '5.9' ]             # WordPress version to check.
+        tools: [ composer ]
+        include:
+          - operating-system: ubuntu-18.04
+            php: 5.6
+            tools: composer:v2.2
+            wp: latest
+          - operating-system: ubuntu-18.04
+            php: 5.6
+            tools: composer:v2.2
+            wp: 5.9
+
     services:
       mysql:
         image: mysql:5.7
@@ -30,14 +41,11 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Downgrade Composer
-        if: matrix.php == '5.6'
-        run: composer self-update --2.2
-
-      - name: Setup PHP
-        uses: nanasess/setup-php@master
+      - name: Setup PHP with composer v2
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
+          tools: ${{ matrix.tools }}
 
       - name: Validate composer.json and composer.lock
         run: composer validate
@@ -63,10 +71,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup PHP
-        uses: nanasess/setup-php@master
+
+      - name: Setup PHP with composer v2
+        uses: shivammathur/setup-php@v2
         with:
           php-version: 5.6
+          tools: composer:v2.2
 
       - name: Install Node
         uses: actions/setup-node@v1
