--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "minimum-stability": "stable",
 	"require": {
-		"php": "^5.6|^7.0"
+		"php": ">=5.6"
 	},
 	"require-dev": {
 		"squizlabs/php_codesniffer": "^3.0",
