--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,34 +1,31 @@
-name: Deploy Plugin
+name: Test Plugin
 
 on:
   push:
-    branches:
-      - master
     tags:
       - '*'
-  pull_request:
-    branches:
-      - master
 
 jobs:
-  phpcs:
-    name: PHP Syntax Check
-    uses: tarosky/workflows/.github/workflows/phpcs.yml@main
-    with:
-      version: 8.0
-
-  assets:
-    name: Stylelint & ESLint
-    uses: tarosky/workflows/.github/workflows/npm.yml@main
-
   release:
-    name: Deploy WordPress.org
-    needs: [ phpcs, assets ]
+    name: Create Release
     if: contains(github.ref, 'tags/')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          ref: master
+
+      - name: Check tagged branch
+        run: |
+          BRANCHS=$(git branch --contains ${{ github.ref_name }})
+          set -- $BRANCHS
+          for BRANCH in $BRANCHS ; do
+          if [[ "$BRANCH" == "main" ]]; then
+           exit 0
+          fi
+          done
+          exit 1
 
       - name: Setup PHP with composer v2
         uses: shivammathur/setup-php@v2
@@ -37,9 +34,9 @@ jobs:
           tools: composer
 
       - name: Install Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '20'
 
       - name: Build Plugin
         run: bash bin/build.sh ${{ github.ref }}
