--- a/package.json
+++ b/package.json
@@ -1,48 +1,73 @@
 {
 	"name": "virtual-member",
-	"main": "gulpfile.js",
+	"main": "index.js",
 	"scripts": {
 		"start": "wp-env start",
 		"update": "wp-env start --update",
-		"env": "wp-env",
 		"stop": "wp-env stop",
+		"env": "wp-env",
 		"cli": "wp-env run cli wp",
 		"cli:test": "wp-env run tests-cli wp",
-		"package": "gulp build",
-		"watch": "gulp watch",
-		"display": "gulp bs",
-		"gulp": "gulp",
-		"lint": "gulp lint",
-		"gulp:task": "gulp --tasks",
-		"fix:js": "eslint --fix -c .eslintrc assets/js",
-		"fix:css": "stylelint --fix assets/scss"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"test:plugin": "RESULT=${PWD##*/} && wp-env run tests-cli ./wp-content/plugins/$RESULT/vendor/bin/phpunit -c ./wp-content/plugins/$RESULT/phpunit.xml.dist",
+		"package": "npm run build:js && npm run build:css && npm run dump",
+		"build:css": "sass ./assets/scss/:./dist/css/ --style=compressed && postcss ./dist/css/**/*.css --replace --use autoprefixer",
+		"build:js": "node ./bin/compiler.js js",
+		"dump": "node ./bin/compiler.js dump",
+		"lint": "npm run lint:js && npm run lint:css",
+		"lint:css": "wp-scripts lint-style './assets/scss/**/*.scss'",
+		"lint:js": "wp-scripts lint-js './assets/js/**/*.js'",
+		"format:js": "eslint --fix ./assets/js",
+		"format:css": "stylelint --fix ./assets/scss",
+		"watch": "npm-watch"
 	},
 	"author": "Tarosky inc.",
 	"license": "LGPL-3.0-or-later",
+	"volta": {
+		"node": "20.18.0"
+	},
 	"devDependencies": {
-		"@babel/core": "^7.1.0",
-		"@babel/plugin-transform-react-jsx": "^7.0.0",
-		"@babel/preset-env": "^7.1.0",
-		"@wordpress/env": "^4.1.3",
-		"@wordpress/eslint-plugin": "^9.0",
-		"babel-eslint": "^10.0.1",
-		"babel-loader": "^8.0.5",
-		"eslint": "^7.13",
-		"gulp": "^4.0.0",
-		"gulp-autoprefixer": "^7.0.0",
-		"gulp-eslint": "^6.0.0",
-		"gulp-load-plugins": "^2.0",
-		"gulp-notify": "^3.2.0",
-		"gulp-plumber": "^1.2.0",
-		"gulp-rename": "^1.4.0",
-		"gulp-sass": "^4.0.2",
-		"gulp-sass-glob": "^1.0.9",
-		"gulp-sourcemaps": "^3.0",
-		"gulp-stylelint": "^13.0.0",
-		"stylelint": "^13.13.1",
-		"stylelint-config-wordpress": "^17.0.0",
-		"vinyl-named": "^1.1.0",
-		"webpack": "^5.3",
-		"webpack-stream": "^6.1"
+		"@kunoichi/grab-deps": "^1.3.0",
+		"@wordpress/env": "^9.10.0",
+		"@wordpress/scripts": "^30.3.0",
+		"cssnano": "^7.0.1",
+		"glob": "^11.0.0",
+		"npm-watch": "^0.13.0",
+		"postcss-cli": "^11.0.0"
+	},
+	"watch": {
+		"build:css": {
+			"extensions": "scss",
+			"patterns": [
+				"assets/scss"
+			]
+		},
+		"build:js": {
+			"extensions": "js",
+			"patterns": [
+				"assets/js"
+			]
+		},
+		"dump": {
+			"extensions": "js,css,php,json",
+			"patterns": [
+				"dist/js",
+				"dist/css",
+				"dist/blocks"
+			]
+		},
+		"lint:css": {
+			"extensions": "scss",
+			"patterns": [
+				"assets/scss"
+			]
+		},
+		"lint:js": {
+			"extensions": "js",
+			"patterns": [
+				"src"
+			]
+		}
 	}
+
 }
