--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,9 @@
 	"extends": [
 		"plugin:@wordpress/eslint-plugin/recommended-with-formatting"
 	],
+	"globals": {
+		"kvm": "readonly"
+	},
 	"rules": {
 		"no-alert": "off",
 		"prettier/prettier": "off",
