--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 		"cli:test": "wp-env run tests-cli wp",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"test:plugin": "RESULT=${PWD##*/} && wp-env run tests-cli ./wp-content/plugins/$RESULT/vendor/bin/phpunit -c ./wp-content/plugins/$RESULT/phpunit.xml.dist",
-		"package": "npm run build:js && npm run build:css && npm run dump",
+		"build": "npm run build:js && npm run build:css && npm run dump",
 		"build:css": "sass ./assets/scss/:./dist/css/ --style=compressed && postcss ./dist/css/**/*.css --replace --use autoprefixer",
-		"build:js": "node ./bin/compiler.js js",
-		"dump": "node ./bin/compiler.js dump",
+		"build:js": "grab-deps js assets/js dist/js",
+		"dump": "grab-deps dump dist",
 		"lint": "npm run lint:js && npm run lint:css",
 		"lint:css": "wp-scripts lint-style './assets/scss/**/*.scss'",
 		"lint:js": "wp-scripts lint-js './assets/js/**/*.js'",
@@ -30,7 +30,7 @@
 		"node": "20.18.0"
 	},
 	"devDependencies": {
-		"@kunoichi/grab-deps": "^1.3.0",
+		"@kunoichi/grab-deps": "^2.0.0",
 		"@wordpress/env": "^9.10.0",
 		"@wordpress/scripts": "^27.0.0",
 		"cssnano": "^7.0.1",
